<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.footballcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/sixty_dp"
                android:layout_height="@dimen/sixty_dp"
                android:contentDescription="@string/juventus_logo"
                android:src="@drawable/juventus" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/juventus"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/sixteen_dp"
                android:paddingLeft="@dimen/sixteen_dp"
                android:paddingRight="@dimen/sixteen_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/forty_eight_sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:onClick="goalTeamA"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/thirty_two_sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="foulTeamA"
                android:text="@string/foul" />

            <TextView
                android:id="@+id/team_a_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/thirty_two_sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="passTeamA"
                android:paddingBottom="@dimen/sixteen_dp"
                android:text="@string/pass" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/eight_dp"
            android:background="@color/yellow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/sixty_dp"
                android:layout_height="@dimen/sixty_dp"
                android:contentDescription="@string/barcelona_logo"
                android:src="@drawable/barcelona_grande" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/barcelona"
                android:textColor="@color/white"
                android:textSize="@dimen/sixteen_sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/sixteen_dp"
                android:paddingLeft="@dimen/sixteen_dp"
                android:paddingRight="@dimen/sixteen_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/forty_eight_sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sixteen_dp"
                android:layout_marginRight="@dimen/sixteen_dp"
                android:onClick="goalTeamB"
                android:text="@string/goal" />

            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/thirty_two_sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="foulTeamB"
                android:text="@string/foul" />

            <TextView
                android:id="@+id/team_b_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/eight_dp"
                android:text="@string/zero"
                android:textColor="@color/white"
                android:textSize="@dimen/thirty_two_sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="passTeamB"
                android:paddingBottom="@dimen/sixteen_dp"
                android:text="@string/pass" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/sixteen_dp"
        android:background="@color/red"
        android:onClick="resetScore"
        android:text="@string/reset" />

</RelativeLayout>

